<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@drawable/back3"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Add_TeacherActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/AddTEACHER"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/scrollView"

        android:layout_width="fill_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="20dp">
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
<TextView
    android:id="@+id/teacherid"
    android:layout_width="138dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="248dp"
    android:text="@string/TeacherID"
    android:textColor="@color/colorsPrimary"
    android:textSize="20sp"
    android:textStyle="bold" />

        <EditText
            android:id="@+id/editTeacherid"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/round_editbox"
            android:hint="  ID"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />


        <TextView
            android:id="@+id/teachernam"
            android:layout_width="190dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="237dp"
            android:text="@string/TeacherName"
            android:textColor="@color/colorsPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editteachername"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/round_editbox"
            android:hint="  Name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />


        <TextView
            android:id="@+id/teachSub"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="251dp"
            android:text="@string/Subject"
            android:textColor="@color/colorsPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/selectsub"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="45dp"
            android:entries="@array/Subject"
            android:hint="   Subject"
            android:padding="10dp"
            android:popupBackground="@drawable/back3"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke"/>

<TextView
    android:id="@+id/addTeacherpass"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="206dp"
    android:text="@string/SetPassword"
    android:textColor="@color/colorsPrimary"
    android:textSize="20sp"
    android:textStyle="bold" />

        <EditText
            android:id="@+id/setTeacherpass"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/round_editbox"
            android:hint="  Set Password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />

<Button
    android:id="@+id/teacheradd"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/round_btn"
    android:text="@string/Add"
    android:layout_gravity="center"
    android:textColor="#ffffff"
    android:textSize="30sp"
    android:textStyle="bold"
    android:typeface="sans"
    android:elevation="20dp"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>