<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/back3"
android:orientation="vertical"
tools:context=".Change_PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3451ab">

    <TextView
        android:id="@+id/chgpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:text="@string/ChangePassword"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/oldps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:text="@string/OldPassword"
        android:textColor="@color/colorsPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/oldpass"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"

        android:background="@drawable/round_editbox"
        android:gravity="fill_vertical"
        android:hint=" Old Password"
        android:inputType="textVisiblePassword|textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorsPrimary"
        android:textColorHint="@color/whiteSmoke"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

<TextView
    android:id="@+id/newps"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="187dp"
    android:text="@string/NewPassword"
    android:textColor="@color/colorsPrimary"
    android:textSize="20sp"
    android:textStyle="bold"
     />

    <EditText
        android:id="@+id/newpass"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/round_editbox"
        android:hint=" New Password"
        android:inputType="textVisiblePassword|textPassword|textCapWords"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/colorsPrimary"
        android:textColorHint="@color/whiteSmoke"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
    android:id="@+id/confps"
    android:layout_width="242dp"
    android:layout_height="wrap_content"

    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="139dp"
    android:text="@string/Confirm"
    android:textColor="@color/colorsPrimary"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="139dp" />

    <EditText
        android:id="@+id/confpass"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/round_editbox"
        android:hint=" Confirm New Password"
        android:inputType="textPassword|textCapWords"
        android:padding="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorsPrimary"
        android:textColorHint="@color/whiteSmoke"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <Button
    android:id="@+id/submit_btn"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:layout_marginTop="20sp"
    android:background="@drawable/round_btn"
    android:text="@string/Submit"
    android:textColor="#ffffff"
    android:textSize="25sp"
    android:textStyle="bold"
    android:typeface="sans" />
</LinearLayout>