<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="146dp"
        android:layout_height="137dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/backgnd" />

    <TextView
        android:id="@+id/apname"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="2dp"
        android:text="@string/digitalAttendance"
        android:textAlignment="center"
        android:textColor="@color/colorsPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_u"
            app:icon="@drawable/ic_u"
            tools:ignore="contentDiscription" />

        <EditText
            android:id="@+id/uid"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_editbox"
            android:hint="@string/userId"
            android:padding="10dp"
            android:singleLine="true"
            android:textAllCaps="true"

            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:capitalize="words" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_pass_foreground"
            app:icon="@drawable/ic_pass_foreground"
            tools:ignore="contentDiscription" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_editbox"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="10dp"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>
    <Button
         android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_margin="20sp"
         android:background="@drawable/round_btn"
         android:text="@string/login"
         android:textColor="@color/White"
         android:textSize="25sp"
         android:textStyle="bold"
         android:typeface="sans"/>



</LinearLayout>