<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@drawable/back3"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Update_StudentActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/updateStudentInfo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="StudentID"
        android:textColor="@color/colorsPrimary"
        android:textSize="25sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/SsearchId"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="45dp"
        android:padding="10dp"
        android:singleLine="true"
        android:background="@drawable/round_editbox"
        android:hint="  Id"
        android:textColor="@color/colorsPrimary"
        android:textColorHint="@color/whiteSmoke"/>
    <Button
        android:id="@+id/seachbtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/round_btn"
        android:text="@string/Search"

        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp" />

    </LinearLayout>
    <ScrollView
    android:layout_marginTop="5dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/studnam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/StudentName"
            android:textColor="@color/colorsPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editstudname2"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="45dp"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/round_editbox"
            android:hint="   Name"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />

        <TextView
            android:id="@+id/studrol3"
            android:layout_width="135dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="246dp"
            android:text="@string/RollNo"
            android:textColor="@color/colorsPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editstudrol3"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/round_editbox"
            android:hint="   Roll No"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />

        <TextView
            android:id="@+id/studclas4"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="248dp"
            android:text="@string/Class"
            android:textColor="@color/colorsPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editclass4"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="45dp"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/round_editbox"
            android:hint="   Class"
            android:textColor="@color/colorsPrimary"
            android:textColorHint="@color/whiteSmoke" />

        <Button
            android:id="@+id/StudUpdate"
            android:layout_width="250dp"
            android:layout_height="50dp"

            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/round_btn"
            android:text="@string/Modify"
            android:textColor="#ffffff"
           android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
</ScrollView>
</LinearLayout>